# template-sveltekit-rolldown-tauri-servo-biome-tailwind-shadcn-bun

./: .gitignore  LICENSE  README.md  biome.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/routes/: +layout.svelte  +page.svelte
