[package]
name = "template-sveltekit-rolldown-tauri-servo-biome-tailwind-shadcn"
version = "0.1.0"
default-run = "template-sveltekit-rolldown-tauri-servo-biome-tailwind-shadcn"
edition = "2024"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tauri-runtime-verso-build = { git = "https://github.com/versotile-org/tauri-runtime-verso.git" }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", default-features = false, features = ["common-controls-v6", "x11"] }
tauri-runtime-verso = { git = "https://github.com/versotile-org/tauri-runtime-verso.git" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
